methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:16: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
def move(nbPas: Int,versLAvant: Boolean):Unit {
                                              ^MethodsPicture:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (versLAvant){
  ^MethodsPicture:29: error: ':' expected but ')' found.
def faireV(c):Unit  {
            ^MethodsPicture:58: error: identifier expected but '}' found.
}
^